# coding-agent

./: .env.template  .gitignore  Dockerfile  README.md  References.md  cli.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_flow.py  run_mcp.py  run_mcp_server.py  setup.py  slack_bot.py
app/: bedrock.py  config.py  exceptions.py  llm.py  schema.py
app/agent/: base.py  browser.py  mcp.py  planning.py  toolcall.py  umile.py
app/constants/: slack_bot.py
app/constants/llm/: base.py  bedrock.py
app/dataset/: collector.py
app/flow/: planning.py
app/mcp/: server.py
app/prompt/: umile.py
app/tool/: browser_use_tool.py  crawl4ai.py  deep_research.py
app/tool/chart_visualization/: package-lock.json  package.json  pnpm-lock.yaml
app/tool/search/: baidu_search.py  bing_search.py  duckduckgo_search.py  google_search.py
config/: config.example-bedrock.toml  config.example-model-ollama.toml  config.example-model-ppio.toml  config.example.toml  config.test.toml  mcp.example.json
