[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "baidusearch>=1.0.3",
    "boto3>=1.37.19",
    "browser-use>=0.1.40",
    "browsergym>=0.13.3",
    "bs4>=0.0.2",
    "docker>=7.1.0",
    "duckduckgo-search>=7.5.3",
    "googlesearch-python>=1.3.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mcp>=1.5.0",
    "openai>=1.68.2",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "setuptools>=78.0.2",
    "slack-bolt>=1.23.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
]
